@@ -27,6 +27,9 @@ Zope Changes
 
     Bugs Fixed
 
+      - Collector #1991: ZPublisher did not deal properly with a trailing
+        %20 in the URL
+
       - Collector #2013: improved XHTML conformance of error messages,
         some of which did not close '<p>' tags.
 
@@ -39,6 +42,7 @@ Zope Changes
   Zope 2.8.5 (2005/12/19)
 
     Bugs Fixed
+
 
       - Collector #1939: When running as a service, Zope could
         potentially collect too much log output filling the NT Event
